--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 .header {
-    background-color:#26d0c9;
+    background-color: #2f5167;
     color:#fff;
     height: 90px;
     padding-bottom: 15px;
@@ -12,10 +12,12 @@
     width:300px;
     font-family:"Avenir Next";
     text-align: center;
+    background-image:url(https://prog-8.com/images/html/advanced/top.png);
 }
 
 .description p {
     letter-spacing: 2px;
+    text-align: center;
 }
 .container{
    font-family: 'Courier New', sans-serif;
