--- a/css/styles.css
+++ b/css/styles.css
@@ -4,15 +4,17 @@
     height: 90px;
     padding-bottom: 15px;
     border-bottom: 50px;
-    font-size: 20px;
+    font-size: 50px;
+    text-align: center;
 }
 
 .description {
     height:300px;
-    width:300px;
     font-family:"Avenir Next";
     text-align: center;
     background-image:url(https://prog-8.com/images/html/advanced/top.png);
+    background-size:cover;
+    color:white;
 }
 
 .description p {
