--- a/css/styles.css
+++ b/css/styles.css
@@ -14,14 +14,14 @@
     text-align: center;
     background-image:url(https://prog-8.com/images/html/advanced/top.png);
     background-size:cover;
-    color:white;
-    opacity:0.5;
+    height: 150px;
 }
 
 .description p {
     letter-spacing: 2px;
     text-align: center;
     line-height: 10px;
+    color: rgba(255,255,255,0.5);
 }
 .container{
    font-family: 'Courier New', sans-serif;
