--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@
     letter-spacing: 2px;
     text-align: center;
     line-height: 10px;
-    color: rgba(255,255,255,0.2);
+    height:150px;
 }
 .container{
    font-family: 'Courier New', sans-serif;
